<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backGround"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#434343"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/ResetButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/resetbutton"
        android:backgroundTint="#0051c2"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/days_one"
        android:hapticFeedbackEnabled="true"
        android:keepScreenOn="false"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.843" />

    <TextView
        android:id="@+id/colon"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:fontFamily="@font/days_one"
        android:text=":"
        android:textAlignment="center"
        android:textColor="#EEEEEE"
        android:textSize="72sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions"
        app:layout_constraintVertical_bias="0.236" />

    <TextView
        android:id="@+id/hourVal"
        android:layout_width="144dp"
        android:layout_height="120dp"
        android:fontFamily="@font/days_one"
        android:text="@string/hourVal"
        android:textAlignment="textEnd"
        android:textColor="#EEEEEE"
        android:textSize="80sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions"
        app:layout_constraintVertical_bias="0.236" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/days_one"
        android:text="@string/timeUntilSilent"
        android:textColor="#EEEEEE"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <Button
        android:id="@+id/StartButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundbutton"
        android:backgroundTint="#0061E9"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/days_one"
        android:hapticFeedbackEnabled="true"
        android:keepScreenOn="false"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.843" />

    <TextView
        android:id="@+id/minVal"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:fontFamily="@font/days_one"
        android:text="@string/minVal"
        android:textAlignment="center"
        android:textColor="#EEEEEE"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions"
        app:layout_constraintVertical_bias="0.234" />

    <TextView
        android:id="@+id/centerMinute"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:fontFamily="@font/days_one"
        android:text="@string/minVal"
        android:textAlignment="center"
        android:textColor="#EEEEEE"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions"
        app:layout_constraintVertical_bias="0.232" />

    <Button
        android:id="@+id/IncreaseTime"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/IncreaseTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions"
        app:layout_constraintVertical_bias="0.124" />

    <Button
        android:id="@+id/DecreaseTime"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/decreaseTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

</androidx.constraintlayout.widget.ConstraintLayout>